# default-workspace-template

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.nixos  MULTI_HARNESS_FUNCTIONALITY_MATRIX.md  MULTI_HARNESS_PROJECT_PLAN.md  README.md  SYSTEM_PROMPT_NOTES.md  VERSION_HISTORY.md  harness-portability-analysis.md  mngr_cli_contract.py  pyproject.toml  services.toml  supervisord.conf  test_docker_image_contract.py  test_mngr_template_stacking.py
.agents/: hooks.json
.claude/: settings.json
.codex/: AGENTS.md  hooks.json
.mngr/: settings.toml
changelog/: amit.md  gabriel-fast-mode.md  gabriel-service-contention.md  mngr-better-chat-auth.md  mngr-datalib-integration.md  mngr-explore-ssh-starting.md  mngr-fable.md  mngr-finish-backups-branch.md  mngr-supervisor.md  multi-harness-support.md  preston-error-checker.md  preston-inspiration-with-preview.md  preston-inspirations-update.md  preston-minds-inspirations.md  preston-minds-scroll-and-text-bugs.md  preston-minds-transcript-search.md  preston-nightly-agent-blink.md  preston-nightly-agent-caretaker-tab.md  preston-nightly-agent-claudemd-scheduler.md  preston-nightly-agent-ct-invoke.md  (+6 more)
libs/error_watcher/: README.md  pyproject.toml
libs/error_watcher/src/error_watcher/: commands.py  commands_test.py  outputs.py  outputs_test.py  routing.py  routing_test.py  watcher.py  watcher_test.py
libs/taxonomy_editor/: README.md  pyproject.toml
libs/taxonomy_editor/src/taxonomy_editor/: runner.py
libs/taxonomy_editor/src/taxonomy_editor/assets/: app.js  index.html  seed_concepts.json
(+393 files in other folders)
