[project]
name = "error-watcher"
version = "0.1.0"
description = "Watches every tmux window in the session for error/exception output and alerts a random mngr agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
]

[project.scripts]
error-watcher = "error_watcher.watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/error_watcher"]
