[project]
name = "taxonomy-editor"
version = "0.1.0"
description = "Editor for canonizing Minds concept terms, definitions, and value enums"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
    "markdown>=3.5",
]

[project.scripts]
taxonomy-editor = "taxonomy_editor.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taxonomy_editor"]
